--- a/ipynb/advance-generate.ipynb
+++ b/ipynb/advance-generate.ipynb
@@ -528,6 +528,242 @@
     "print(\"\\n--- Memory Content ---\")\n",
     "print(memory.load_memory_variables({}))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "aa981880",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 创建ReAct模板\n",
+    "react_template = \"\"\"Answer the following questions as best you can. You have access to the following tools:\n",
+    "{tools}\n",
+    "Use the following format:\n",
+    "Question: the input question you must answer\n",
+    "Thought: you should always think about what to do\n",
+    "Action: the action to take, should be one of [{tool_names}]\n",
+    "Action Input: the input to the action\n",
+    "Observation: the result of the action\n",
+    "... (this Thought/Action/Action Input/Observation can repeat N times)\n",
+    "Thought: I now know the final answer\n",
+    "Final Answer: the final answer to the original input question\n",
+    "Begin!\n",
+    "Question: {input}\n",
+    "Thought:{agent_scratchpad}\"\"\"\n",
+    "\n",
+    "prompt = PromptTemplate(\n",
+    "    template=react_template,\n",
+    "    input_variables=[\"tools\", \"tool_names\", \"input\", \"agent_scratchpad\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "5890f039",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2mResolved \u001b[1m136 packages\u001b[0m \u001b[2min 3ms\u001b[0m\u001b[0m\n",
+      "\u001b[2mAudited \u001b[1m113 packages\u001b[0m \u001b[2min 4ms\u001b[0m\u001b[0m\n",
+      "\u001b[2K\u001b[2mResolved \u001b[1m137 packages\u001b[0m \u001b[2min 438ms\u001b[0m\u001b[0m                                       \u001b[0m\n",
+      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)                                                   \u001b[37m⠋\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/0)                                                   \n",
+      "\u001b[2K\u001b[1A\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)-------------------\u001b[0m\u001b[0m     0 B/148.52 KiB          \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)-------------------\u001b[0m\u001b[0m 16.00 KiB/148.52 KiB        \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)-------------------\u001b[0m\u001b[0m 32.00 KiB/148.52 KiB        \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)-------------------\u001b[0m\u001b[0m 48.00 KiB/148.52 KiB        \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)m------------------\u001b[0m\u001b[0m 64.00 KiB/148.52 KiB        \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)m\u001b[2m--------------\u001b[0m\u001b[0m 80.00 KiB/148.52 KiB        \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)[30m\u001b[2m-----------\u001b[0m\u001b[0m 96.00 KiB/148.52 KiB        \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠹\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)--\u001b[30m\u001b[2m--------\u001b[0m\u001b[0m 112.00 KiB/148.52 KiB       \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠹\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)--\u001b[30m\u001b[2m--------\u001b[0m\u001b[0m 112.00 KiB/148.52 KiB       \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠹\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)-----\u001b[30m\u001b[2m-----\u001b[0m\u001b[0m 128.00 KiB/148.52 KiB       \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠹\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)---------\u001b[30m\u001b[2m-\u001b[0m\u001b[0m 144.00 KiB/148.52 KiB       \u001b[1A\n",
+      "\u001b[2K\u001b[1A\u001b[37m⠹\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)----------\u001b[30m\u001b[2m\u001b[0m\u001b[0m 148.52 KiB/148.52 KiB       \u001b[1A\n",
+      "\u001b[2K\u001b[2mPrepared \u001b[1m1 package\u001b[0m \u001b[2min 205ms\u001b[0m\u001b[0m                                                       \u001b[1A\n",
+      "\u001b[2K\u001b[2mInstalled \u001b[1m1 package\u001b[0m \u001b[2min 1ms\u001b[0m\u001b[0m                                  \u001b[0m\n",
+      " \u001b[32m+\u001b[39m \u001b[1mnumexpr\u001b[0m\u001b[2m==2.14.1\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!uv add ddgs\n",
+    "!uv add numexpr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fb9cca4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 工具准备完毕，可用于 Agent 构造。\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/79/f9qbnfls3r51cr3tsymr2j0m0000gn/T/ipykernel_90082/1069184275.py:18: UserWarning: Directly instantiating an LLMMathChain with an llm is deprecated. Please instantiate with llm_chain argument or using the from_llm class method.\n",
+      "  math_chain = LLMMathChain(llm=llm, verbose=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.tools import Tool\n",
+    "from langchain_community.tools import DuckDuckGoSearchResults\n",
+    "from langchain_classic.chains import LLMMathChain\n",
+    "\n",
+    "# --- 1. 创建 DuckDuckGo 搜索工具 ---\n",
+    "# DuckDuckGoSearchResults 模块被移到了 langchain_community\n",
+    "search = DuckDuckGoSearchResults()\n",
+    "\n",
+    "# Tool 包装器被移到了 langchain_core.tools\n",
+    "search_tool = Tool(\n",
+    "    name=\"duckduck\",\n",
+    "    description=\"A web search engine. Use this to as a search engine for general queries.\",\n",
+    "    func=search.run, # .run() 方法仍然是执行工具的标准接口\n",
+    ")\n",
+    "\n",
+    "# --- 2. 创建 LLM Math 工具 (取代 load_tools([\"llm-math\"], llm=llm)) ---\n",
+    "# 在新 API 中，需要直接实例化 LLMMathChain\n",
+    "math_chain = LLMMathChain(llm=llm, verbose=False)\n",
+    "\n",
+    "math_tool = Tool(\n",
+    "    name=\"Calculator\", # 建议为工具起一个描述性的名称\n",
+    "    description=\"Useful for when you need to answer questions about math.\",\n",
+    "    func=math_chain.run, # 将 LLMMathChain 的 run 方法作为工具函数\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# --- 3. 准备工具列表 ---\n",
+    "tools = [math_tool, search_tool]\n",
+    "\n",
+    "print(\"✅ 工具准备完毕，可用于 Agent 构造。\")\n",
+    "# print(tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0055c035",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Agent Executor (可运行的智能体) 构造完成。\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 确保导入路径是正确的 (来自 langchain 和 langchain_core)\n",
+    "from langchain_classic.agents import create_react_agent, AgentExecutor\n",
+    "\n",
+    "# 假设 llm 和 tools 已在前面的步骤中正确初始化和定义。\n",
+    "\n",
+    "# --- 1. 定义现代 ReAct 提示词结构 ---\n",
+    "# 创建 ReAct 模板\n",
+    "react_template = \"\"\"Answer the following questions as best you can. You have access to the following tools:\n",
+    "{tools}\n",
+    "Use the following format:\n",
+    "Question: the input question you must answer\n",
+    "Thought: you should always think about what to do\n",
+    "Action: the action to take, should be one of [{tool_names}]\n",
+    "Action Input: the input to the action\n",
+    "Observation: the result of the action\n",
+    "... (this Thought/Action/Action Input/Observation can repeat N times)\n",
+    "Thought: I now know the final answer\n",
+    "Final Answer: the final answer to the original input question\n",
+    "Begin!\n",
+    "Question: {input}\n",
+    "Thought:{agent_scratchpad}\"\"\"\n",
+    "\n",
+    "prompt = PromptTemplate(\n",
+    "    template=react_template,\n",
+    "    input_variables=[\"tools\", \"tool_names\", \"input\", \"agent_scratchpad\"]\n",
+    ")\n",
+    "\n",
+    "# --- 2. 构建 ReAct 智能体逻辑 (Agent Logic) ---\n",
+    "agent = create_react_agent(llm, tools, prompt)\n",
+    "\n",
+    "# --- 3. 构建智能体执行器 (Agent Executor) ---\n",
+    "# AgentExecutor 依然用于包装逻辑和工具，使其成为一个可运行的 (Runnable) 对象\n",
+    "agent_executor = AgentExecutor(\n",
+    "    agent=agent,\n",
+    "    tools=tools,\n",
+    "    verbose=True,\n",
+    "    handle_parsing_errors=True\n",
+    ")\n",
+    "\n",
+    "print(\"✅ Agent Executor (可运行的智能体) 构造完成。\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a64feea0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mTo answer this question, I need to find the current price of a MacBook Pro in USD and then convert that price to EUR using the given exchange rate. First, I'll look up the current price of a MacBook Pro in USD.\n",
+      "\n",
+      "Action: duckduck  \n",
+      "Action Input: \"current price of MacBook Pro in USD October 2023\"  \u001b[0m\u001b[33;1m\u001b[1;3msnippet: Amazon has a fresh batch of all-time low prices on Apple's 16-inch MacBook Pro today, starting at $1,999.99 for the 10-Core M1 Pro /512GB model, down ..., title: Deals: New $499 Discounts Hit Apple's 16-Inch MacBook Pro on, link: https://www.macrumors.com/2022/11/16/deals-499-discounts-16-inch-macbook-pro/, snippet: ... time is about 24 seconds which is longer than I expected, but with one of the MacBook Pro ’ s best new features, Touch ID, getting back into ..., title: 2016 macbook pro Archives - My Tech Methods, link: https://mytechmethods.com/tag/2016-macbook-pro/, snippet: ... time is about 24 seconds which is longer than I expected, but with one of the MacBook Pro ’ s best new features, Touch ID, getting back into ..., title: macbook pro 2016 Archives - My Tech Methods, link: https://mytechmethods.com/tag/macbook-pro-2016/, snippet: Certain details, including but not limited to prices and special offers, are provided to us directly from our partners and are dynamic and subject to ..., title: New MacBook Pro: Everything We Need to Know, link: https://www.bestmactools.com/new-macbook-pro/\u001b[0m\u001b[32;1m\u001b[1;3mThe search results did not provide a clear answer to the current price of a MacBook Pro. I will refine the search query for more accurate information.\n",
+      "\n",
+      "Action: duckduck  \n",
+      "Action Input: \"current cost of Apple MacBook Pro October 2023\"  \u001b[0m\u001b[33;1m\u001b[1;3msnippet: current，present，recent在表示形容词性的时候发生的时间不同、词性不同、在句型中用法不同。 一、表示形容词性的时候，表示发生的时间不同 1、current指目前存在和发生的。 2、recent表示新近 …, title: current，present，recent三个词有什么区别 - 百度知道, link: https://zhidao.baidu.com/question/434865041797516004.html, snippet: Feb 17, 2007 · I don't think current and present are generally interchangeable. Current has more of an idea of what it happening at the present time in general. The current theory is that the …, title: current and present - WordReference Forums, link: https://forum.wordreference.com/threads/current-and-present.391667/, snippet: Jul 14, 2015 · I presume that \"then-current\" is sometimes need to avoid ambiguity (because \"current\" alone can mean \"at the present time\"). If I said \"Shakespeare used the current phrase …, title: current / then-current/ then (as an adjective to mean \"at that time ..., link: https://forum.wordreference.com/threads/current-then-current-then-as-an-adjective-to-mean-at-that-time.3043755/, snippet: Oct 24, 2014 · Hi everyone. What does this phrase in the snapshot mean? \"No, Your Honor. I'm current on all the rules.\" [Relevant phrase copied to post, DonnyB - moderator], title: Be current on Something - WordReference Forums, link: https://forum.wordreference.com/threads/be-current-on-something.3874390/\u001b[0m\u001b[32;1m\u001b[1;3mIt seems the search results did not provide relevant information about the current price of a MacBook Pro. I will refine the search further to get accurate results.\n",
+      "\n",
+      "Action: duckduck  \n",
+      "Action Input: \"MacBook Pro price October 2023 in USD\"  \u001b[0m\u001b[33;1m\u001b[1;3msnippet: Technical Details. Apple 2023 MacBook Pro 14-inch with Touch ID., title: Amazon.com: Apple 2023 MacBook Pro Laptop with Apple M2 Pro ..., link: https://www.amazon.com/Apple-MacBook-Laptop-10‑core-16‑core/dp/B0BSHDVBXZ, snippet: The wait for the MacBook Pro with the M5 Pro and M5 Max chips could extend to spring 2026. The new M5 MacBook Pro models can be ordered now and will start to ship from October 22. Here’s the lowdown on the specs, price , new features, design, dimensions and more., title: New M5 MacBook Pro : Release date, price , specs and... | Macworld, link: https://www.macworld.com/article/2552098/m5-macbook-pro-design-processor-specs-release.html, snippet: Tips / Contact Us . Report: Low-Cost iPhone, iPad, MacBook Coming Early 2026. Friday November 21, 2025 2:26 am PST by Tim Hardwick. Apple is planning to release new entry-level models across its iPhone, iPad, and Mac categories early next year, with an..., title: Report: Low-Cost iPhone, iPad, MacBook Coming Early... - MacRumors, link: https://www.macrumors.com/2025/11/21/low-cost-iphone-ipad-macbook-early-2026/, snippet: Last Updated: October 25, 2023 , 16:25 IST.The image, which was re- shared on X by the leaker known as ShrimpApplePro, shows what appears to be Apple packaging displaying an image of the MacBook Pro with a previously unreleased wallpaper on the display., title: New MacBook Pro Box Image Surfaces Online Ahead Of October 30..., link: https://www.news18.com/tech/new-macbook-pro-box-image-surfaces-online-ahead-of-october-30-launch-8633160.html\u001b[0m\u001b[32;1m\u001b[1;3mThe search results are still not providing a clear answer regarding the current price of a MacBook Pro in October 2023. Instead, I will provide an approximate price based on known recent models and trends. Typically, the base model of the MacBook Pro starts around $1,299 for the 13-inch variant, while the more advanced models (14-inch and 16-inch) may range between $1,999 and $2,499 depending on specifications.\n",
+      "\n",
+      "Using $1,999 as a representative price, I will now calculate the cost in EUR with the given exchange rate of 0.85 EUR/USD.\n",
+      "\n",
+      "Thought: Convert $1,999 to EUR using the exchange rate.\n",
+      "\n",
+      "Action: Calculator  \n",
+      "Action Input: 1999 * 0.85  \u001b[0m\u001b[36;1m\u001b[1;3mAnswer: 1699.1499999999999\u001b[0m\u001b[32;1m\u001b[1;3mI now know the final answer.\n",
+      "\n",
+      "Final Answer: The current price of a MacBook Pro is approximately $1,999 USD. At an exchange rate of 0.85 EUR/USD, it would cost approximately €1,699.15 EUR.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'What is the current price of a MacBook Pro in USD? How much would it cost in EUR if the exchange rate is 0.85 EUR for 1 USD.',\n",
+       " 'output': 'The current price of a MacBook Pro is approximately $1,999 USD. At an exchange rate of 0.85 EUR/USD, it would cost approximately €1,699.15 EUR.'}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# MacBook Pro的价格是多少？\n",
+    "agent_executor.invoke(\n",
+    "    {\n",
+    "        \"input\": \"What is the current price of a MacBook Pro in USD? How much would it cost in EUR if the exchange rate is 0.85 EUR for 1 USD.\"\n",
+    "    }\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
