--- a/ipynb/rag.ipynb
+++ b/ipynb/rag.ipynb
@@ -11,7 +11,9 @@
     "!uv add numpy\n",
     "!uv add pandas\n",
     "!uv add tqdm\n",
-    "!uv add faiss-cpu"
+    "!uv add faiss-cpu\n",
+    "!uv add scikit-learn\n",
+    "!uv add rank_bm25"
    ]
   },
   {
@@ -115,6 +117,47 @@
     "query = \"how precise was the science\"\n",
     "results = search(query)\n",
     "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43f68da5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rank_bm25 import BM25Okapi\n",
+    "from sklearn.feature_extraction import _stop_words\n",
+    "import string\n",
+    "\n",
+    "def bm25_tokenizer(text):\n",
+    "    tokenized_doc = []\n",
+    "    for token in text.lower().split():\n",
+    "        token = token.strip(string.punctuation)\n",
+    "        if len(token) > 0 and token not in _stop_words.ENGLISH_STOP_WORDS:\n",
+    "            tokenized_doc.append(token)\n",
+    "    return tokenized_doc\n",
+    "\n",
+    "\n",
+    "tokenized_corpus = []\n",
+    "for passage in tqdm(texts):\n",
+    "    tokenized_corpus.append(bm25_tokenizer(passage))\n",
+    "\n",
+    "bm25 = BM25Okapi(tokenized_corpus)\n",
+    "\n",
+    "def keyword_search(query, top_k=3, num_candidates=15):\n",
+    "    print(\"Input question:\", query)\n",
+    "    ##### BM25搜索（词汇搜索） #####\n",
+    "    bm25_scores = bm25.get_scores(bm25_tokenizer(query))\n",
+    "    top_n = np.argpartition(bm25_scores, -num_candidates)[-num_candidates:]\n",
+    "    bm25_hits = [{'corpus_id': idx, 'score': bm25_scores[idx]} for idx in top_n]\n",
+    "    bm25_hits = sorted(bm25_hits, key=lambda x: x['score'], reverse=True)\n",
+    "\n",
+    "    print(f\"Top-3 lexical search (BM25) hits\")\n",
+    "    for hit in bm25_hits[0:top_k]:\n",
+    "        print(\"\\t{:.3f}\\t{}\".format(hit['score'], texts[hit['corpus_id']].replace(\"\\n\", \" \")))\n",
+    "\n",
+    "keyword_search(query = \"how precise was the science\")"
    ]
   }
  ],
