--- a/ipynb/rag.ipynb
+++ b/ipynb/rag.ipynb
@@ -159,6 +159,110 @@
     "\n",
     "keyword_search(query = \"how precise was the science\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "83b4de1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[RerankResponseResultsItem(document=RerankResponseResultsItemDocument(text='It has also received praise from many astronomers for its scientific accuracy and portrayal of theoretical astrophysics'), index=12, relevance_score=0.15239799),\n",
+       " RerankResponseResultsItem(document=RerankResponseResultsItemDocument(text='The film had a worldwide gross over $677 million (and $773 million with subse quent re-releases), making it the tenth-highest grossing film of 2014'), index=10, relevance_score=0.05086082),\n",
+       " RerankResponseResultsItem(document=RerankResponseResultsItemDocument(text='Interstellar is a 2014 epic science fiction film co-written, directed, and produced by Christopher Nolan'), index=0, relevance_score=0.0350424)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"how precise was the science\"\n",
+    "results = co.rerank(query=query, documents=texts, top_n=3, return_documents=True)\n",
+    "results.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1389177f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.15239799 It has also received praise from many astronomers for its scientific accuracy and portrayal of theoretical astrophysics\n",
+      "1 0.05086082 The film had a worldwide gross over $677 million (and $773 million with subse quent re-releases), making it the tenth-highest grossing film of 2014\n",
+      "2 0.0350424 Interstellar is a 2014 epic science fiction film co-written, directed, and produced by Christopher Nolan\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, result in enumerate(results.results):\n",
+    "    print(idx, result.relevance_score , result.document.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b95ed5e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def keyword_and_reranking_search(query, top_k=3, num_candidates=10):\n",
+    "    print(\"Input question:\", query)\n",
+    "    ##### BM25搜索（词汇搜索）#####\n",
+    "    bm25_scores = bm25.get_scores(bm25_tokenizer(query))\n",
+    "    top_n = np.argpartition(bm25_scores, -num_candidates)[-num_candidates:]\n",
+    "    bm25_hits = [{'corpus_id': idx, 'score': bm25_scores[idx]} for idx in top_n]\n",
+    "    bm25_hits = sorted(bm25_hits, key=lambda x: x['score'], reverse=True)\n",
+    "\n",
+    "    print(f\"Top-3 lexical search (BM25) hits\")\n",
+    "\n",
+    "    for hit in bm25_hits[0:top_k]:\n",
+    "        print(\"\\t{:.3f}\\t{}\".format(hit['score'], texts[hit['corpus_id']].replace(\"\\n\", \" \")))\n",
+    "\n",
+    "    # 添加重排序\n",
+    "    docs = [texts[hit['corpus_id']] for hit in bm25_hits]\n",
+    "    print(f\"\\nTop-3 hits by rank-API ({len(bm25_hits)} BM25 hits re-ranked)\")\n",
+    "    \n",
+    "    results = co.rerank(query=query, documents=docs, top_n=top_k, return_documents=True)\n",
+    "    # print(results.results)\n",
+    "    for hit in results.results:\n",
+    "        # print(hit)\n",
+    "        print(\"\\t{:.3f}\\t{}\".format(hit.relevance_score, hit.document.text.replace(\"\\n\", \" \")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "09ae6c8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input question: how precise was the science\n",
+      "Top-3 lexical search (BM25) hits\n",
+      "\t1.793\tInterstellar is a 2014 epic science fiction film co-written, directed, and produced by Christopher Nolan\n",
+      "\t1.377\tCaltech theoretical physicist and 2017 Nobel laureate in Physics[4] Kip Thorne was an executive producer, acted as a scientific consultant, and wrote a tie-in book, The Science of Interstellar\n",
+      "\t0.000\tInterstellar uses extensive practical and miniature effects and the company Double Negative created additional digital effects\n",
+      "\n",
+      "Top-3 hits by rank-API (10 BM25 hits re-ranked)\n",
+      "\t0.035\tInterstellar is a 2014 epic science fiction film co-written, directed, and produced by Christopher Nolan\n",
+      "\t0.032\tIt stars Matthew McConaughey, Anne Hathaway, Jessica Chastain, Bill Irwin, Ellen Burstyn, Matt Damon, and Michael Caine\n",
+      "\t0.031\tCaltech theoretical physicist and 2017 Nobel laureate in Physics[4] Kip Thorne was an executive producer, acted as a scientific consultant, and wrote a tie-in book, The Science of Interstellar\n"
+     ]
+    }
+   ],
+   "source": [
+    "keyword_and_reranking_search(query = \"how precise was the science\")"
+   ]
   }
  ],
  "metadata": {
