run colab in vscode

--- a/ipynb/rag.ipynb
+++ b/ipynb/rag.ipynb
@@ -2,11 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0770b2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding `\u001b[36mipynb\u001b[39m` as member of workspace `\u001b[36m/Users/ohmycloud/opt/learning/llm/hands-on-large-language-model\u001b[39m`\n",
+      "Initialized project `\u001b[36mipynb\u001b[39m`\n",
+      "\u001b[2K\u001b[2mResolved \u001b[1m151 packages\u001b[0m \u001b[2min 956ms\u001b[0m\u001b[0m                                       \u001b[0m\n",
+      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2mpandas==2.3.3                                                                 \u001b[0m\u001b[2mAudited \u001b[1m27 packages\u001b[0m \u001b[2min 6ms\u001b[0m\u001b[0m\n",
+      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2mpandas==2.3.3                                                                 \u001b[0m\u001b[2mResolved \u001b[1m151 packages\u001b[0m \u001b[2min 32ms\u001b[0m\u001b[0m\n",
+      "\u001b[2K\u001b[2mAudited \u001b[1m28 packages\u001b[0m \u001b[2min 1ms\u001b[0m\u001b[0m                                           \u001b[0m\n",
+      "\u001b[2K\u001b[2mResolved \u001b[1m151 packages\u001b[0m \u001b[2min 34ms\u001b[0m\u001b[0m                                        \u001b[0m\n",
+      "\u001b[2K\u001b[2mAudited \u001b[1m33 packages\u001b[0m \u001b[2min 2ms\u001b[0m\u001b[0m                                           \u001b[0m\n",
+      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2mpandas==2.3.3                                                                 \u001b[0m\u001b[2mResolved \u001b[1m151 packages\u001b[0m \u001b[2min 32ms\u001b[0m\u001b[0m\n",
+      "\u001b[2K\u001b[2mAudited \u001b[1m33 packages\u001b[0m \u001b[2min 0.65ms\u001b[0m\u001b[0m                                        \u001b[0m\n",
+      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2mpandas==2.3.3                                                                 \u001b[0m\u001b[2mResolved \u001b[1m151 packages\u001b[0m \u001b[2min 32ms\u001b[0m\u001b[0m\n",
+      "\u001b[2K\u001b[2mAudited \u001b[1m34 packages\u001b[0m \u001b[2min 1ms\u001b[0m\u001b[0m                                           \u001b[0m\n",
+      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2mpandas==2.3.3                                                                 \u001b[0m\u001b[2mResolved \u001b[1m151 packages\u001b[0m \u001b[2min 32ms\u001b[0m\u001b[0m\n",
+      "\u001b[2K\u001b[2mAudited \u001b[1m38 packages\u001b[0m \u001b[2min 2ms\u001b[0m\u001b[0m                                           \u001b[0m\n",
+      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2mpandas==2.3.3                                                                 \u001b[0m\u001b[2mResolved \u001b[1m151 packages\u001b[0m \u001b[2min 32ms\u001b[0m\u001b[0m\n",
+      "\u001b[2K\u001b[2mAudited \u001b[1m39 packages\u001b[0m \u001b[2min 0.98ms\u001b[0m\u001b[0m                                        \u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
+    "!uv init\n",
     "!uv add cohere\n",
     "!uv add numpy\n",
     "!uv add pandas\n",
@@ -18,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "13f41fde",
    "metadata": {},
    "outputs": [],
@@ -55,10 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "47ba3765",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15, 4096)\n"
+     ]
+    }
+   ],
    "source": [
     "# 获取嵌入向量\n",
     "response = co.embed(\n",
@@ -74,10 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8cb6d95a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import faiss\n",
     "\n",
@@ -89,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f2e758f6",
    "metadata": {},
    "outputs": [],
@@ -109,10 +149,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8390d00f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query:'how precise was the science'\n",
+      "Nearest neighbors:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>texts</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>It has also received praise from many astronom...</td>\n",
+       "      <td>10757.366211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Caltech theoretical physicist and 2017 Nobel l...</td>\n",
+       "      <td>11566.133789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Interstellar uses extensive practical and mini...</td>\n",
+       "      <td>11922.839844</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               texts      distance\n",
+       "0  It has also received praise from many astronom...  10757.366211\n",
+       "1  Caltech theoretical physicist and 2017 Nobel l...  11566.133789\n",
+       "2  Interstellar uses extensive practical and mini...  11922.839844"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = \"how precise was the science\"\n",
     "results = search(query)\n",
@@ -121,10 +226,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "43f68da5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 47771.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input question: how precise was the science\n",
+      "Top-3 lexical search (BM25) hits\n",
+      "\t1.793\tInterstellar is a 2014 epic science fiction film co-written, directed, and produced by Christopher Nolan\n",
+      "\t1.377\tCaltech theoretical physicist and 2017 Nobel laureate in Physics[4] Kip Thorne was an executive producer, acted as a scientific consultant, and wrote a tie-in book, The Science of Interstellar\n",
+      "\t0.000\tIt stars Matthew McConaughey, Anne Hathaway, Jessica Chastain, Bill Irwin, Ellen Burstyn, Matt Damon, and Michael Caine\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from rank_bm25 import BM25Okapi\n",
     "from sklearn.feature_extraction import _stop_words\n",
@@ -162,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "83b4de1b",
    "metadata": {},
    "outputs": [
@@ -174,7 +305,7 @@
        " RerankResponseResultsItem(document=RerankResponseResultsItemDocument(text='Interstellar is a 2014 epic science fiction film co-written, directed, and produced by Christopher Nolan'), index=0, relevance_score=0.0350424)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "1389177f",
    "metadata": {},
    "outputs": [
@@ -208,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "b95ed5e9",
    "metadata": {},
    "outputs": [],
@@ -262,6 +393,36 @@
    ],
    "source": [
     "keyword_and_reranking_search(query = \"how precise was the science\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "684e459e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query:'income generated'\n",
+      "Nearest neighbors:\n",
+      "The film generated a worldwide gross of over $677 million, and $773 million with subsequent re-releases.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"income generated\"\n",
+    "# 1.检索\n",
+    "# 我们将使用嵌入式搜索，但理想情况下应该使用混合搜索\n",
+    "results = search(query)\n",
+    "# 2.基于知识的生成\n",
+    "docs_dict = [{'text': text} for text in results['texts']]\n",
+    "response = co.chat(\n",
+    "    message = query,\n",
+    "    documents=docs_dict\n",
+    ")\n",
+    "print(response.text)"
    ]
   }
  ],
